# Cignature

./: ARCHITECTURE.md  DOCTRINE.md  README.md  TOOLS.md  dev.sh
docs/: AI_CONTEXT.md  HANDOFF.md  NATIVE_APP_PLAN.md
frontend/: .gitignore  craco.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.mjs
frontend/public/: index.html
frontend/src/: App.js  App.jsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: commands.rs  engine.rs  history.rs  lib.rs  main.rs  paths.rs  settings.rs  setup.rs  url_canonical.rs
frontend/src-tauri/src/engine/: audio.rs  fetch.rs  job.rs  mod.rs  pack.rs  separate.rs  transcribe.rs
frontend/src/components/: CircularHub.js  Inspector.js  Sidebar.js  StatusBar.js  Titlebar.js
frontend/src/components/Hud/: Hud.jsx  useHudPointer.js
frontend/src/components/shared/: CommandSummary.js  JobCard.js  StageRail.js  StatusPill.js
frontend/src/context/: CigsContext.js
frontend/src/data/: seed.js
frontend/src/screens/: LogsScreen.js  MainScreen.js  ProgressScreen.js  QueueScreen.js  ResultScreen.js  SettingsScreen.js
frontend/src/state/: branches.js  cigs.js
frontend/src/styles/: index.css  tokens.css
frontend/src/surfaces/CancelConfirm/: CancelConfirm.jsx
frontend/src/surfaces/HistoryNote/: HistoryNote.jsx
frontend/src/surfaces/Hud/: BranchArc.jsx  DoneCheck.jsx  Hud.jsx  ProgressRing.jsx  index.js  useHudMotion.js
frontend/src/surfaces/PrimaryCta/: PrimaryCta.jsx
frontend/src/surfaces/SettingsSheet/: SettingsSheet.jsx
frontend/src/surfaces/SetupBanner/: SetupBanner.jsx
frontend/src/surfaces/SourcePreview/: SourcePreview.jsx
frontend/src/surfaces/UrlField/: UrlField.jsx
frontend/src/tauri/: commands.js
legacy/: README.md
legacy/docs/: DESIGN_OVERHAUL.md  HANDOFF.md
legacy/frontend/: .npmrc  package.json  vite.config.mjs
legacy/frontend/src-tauri/: Cargo.toml
legacy/frontend/src-tauri/capabilities/: default.json
legacy/frontend/src-tauri/icons/: icon.icns
legacy/frontend/src-tauri/src/: engine.rs  lib.rs
legacy/frontend/src/components/: StatusBar.js  Titlebar.js
legacy/frontend/src/components/Hud/: Hud.jsx
legacy/frontend/src/components/shared/: JobCard.js
legacy/frontend/src/context/: CigsContext.js
legacy/frontend/src/data/: seed.js
legacy/frontend/src/screens/: ResultScreen.js
