[package]
name = "app"
version = "0.1.0"
description = "Cigs — local Mac media utility"
authors = ["Cigs"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
# Only what the engine actually uses today. Future-prep deps were removed
# (tauri-plugin-dialog/opener, uuid, thiserror, once_cell, anyhow) — they
# slowed builds for no value and confused the next reader. Re-add when wired.
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
dirs = "5"
which = "6"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
