[package]
name = "cigs"
version = "0.1.0"
description = "Cigs — local Mac media utility"
authors = ["Cigs"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cigs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
