[package]
name = "cigs"
version = "0.1.0"
description = "Cigs — local Mac media utility"
authors = ["Cigs"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cigs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "io-util", "fs", "time"] }
which = "6"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
url = "2"
once_cell = "1"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
