[package]
name = "app"
version = "0.1.0"
description = "Cigs — local Mac media utility"
authors = ["Cigs"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# P4 native feel — system notification on job done; Finder reveal on output click.
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
dirs = "5"
which = "6"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
